# Research-Flow

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  start-dev.bat
backend/: .env.example  README.md  pyproject.toml
backend/app/: dependencies.py  library.py  main.py  settings.py
backend/app/api/: categories.py  config.py  dashboard.py  discover.py  discovery.py  jobs.py  paper_download.py  papers.py  projects.py  resources.py  settings.py
backend/app/core/: config.py  llm_config.py  mcp_config.py  storage.py
backend/app/schemas/: categories.py  common.py  config.py  dashboard.py  discovery.py  paper_download.py  papers.py  projects.py  resources.py
backend/app/services/: pdf_parser_service.py
backend/app/services/llm/: __init__.py  providers.py  registry.py  schemas.py
backend/app/services/mcp/: __init__.py  zotero_client.py
backend/app/services/paper_download/: __init__.py  service.py
backend/app/services/papers/: __init__.py  assets.py  models.py  repository.py  schema.py  service.py
backend/app/services/pdf_parser/: __init__.py  context.py  markdown_refine.py  models.py  postprocess.py  sections.py  service.py
backend/config/: README.md  prompt_templates.toml  settings.toml  skill_bindings.toml
backend/config/prompts/: paper_note_generate.md  paper_refine.md  paper_section_split.md
backend/core/: README.md  __init__.py  assets.py  config.py  mineru_config.py  paper_download_config.py  pdf_parser_config.py  schema.py  storage.py  task_names.py
backend/core/services/: __init__.py  projects.py
backend/core/services/categories/: __init__.py  models.py  repository.py
backend/core/services/discovery/: __init__.py  models.py  repository.py
backend/core/services/documents/: __init__.py  blocks.py
backend/core/services/llm/: __init__.py  providers.py  registry.py
backend/core/services/mcp/: __init__.py  zotero_client.py
backend/core/services/paper_download/: __init__.py  service.py
backend/core/services/papers/: __init__.py  layouts.py  metadata.py  (+13 more)
backend/scripts/: batch_maintenance.py  paper_library.py
backend/tests/: conftest.py  run_local_smoke.py  run_lora_confirm_demo.py  run_paper_download_cases.py  run_paper_pipeline_smoke.py  run_real_paper_network_probe.py  run_service_smoke.py  test_api.py  test_categories_api.py  test_config_api.py  test_discovery_api.py  test_import_smoke.py  test_library.py  test_llm.py  test_llm_connectivity.py  test_llm_registry.py  test_mineru_config_and_parser.py  test_mineru_postprocess.py  test_paper_download_api.py  test_paper_download_settings.py  test_paper_refine_runtime.py  test_papers_api.py  test_pdf_parser_pipeline.py  test_projects_api.py  test_raw_zotero.py  test_research_vault_layout.py  test_resources_api.py  test_schema_initialization.py  test_task_names.py  test_worker_tasks.py  test_zotero.py  test_zotero_client.py
backend/worker/: app.py  config.py  pyproject.toml  schedules.py
backend/worker/tasks/: __init__.py  conference.py  feed.py  knowledge.py  papers.py  presentation.py  projects.py
(+277 files in other folders)
