[project]
name = "research-flow-backend"
version = "0.1.0"
description = "Research-Flow backend"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.17",
    "anthropic>=0.57,<1",
    "fastapi>=0.115,<1",
    "mcp>=1.27.0",
    "openai>=1.76,<2",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.13,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[tool.uv.workspace]
members = ["worker"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
exclude = [
    ".uv-cache",
    ".venv",
    "pytest-cache-files-*",
]
