[project]
name = "research-flow-backend"
version = "0.1.0"
description = "Research-Flow backend"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.17",
    "anthropic>=0.57,<1",
    "fastapi>=0.115,<1",
    "gpaper @ git+https://github.com/WMGray/getPaper.git",
    "httpx>=0.28,<1",
    "mcp>=1.27.0",
    "mineru-open-sdk>=0.2.5,<1",
    "openai>=1.76,<2",
    "pillow>=11,<12",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.13,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[tool.uv.workspace]
members = ["worker"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [
    ".uv-cache",
    ".venv",
    "pytest-cache-files-*",
]

[tool.ruff.lint.per-file-ignores]
"tests/run_*.py" = ["E402"]
"tests/test_llm.py" = ["E402"]
"tests/test_pdf_parser_pipeline.py" = ["E402"]
"tests/test_zotero.py" = ["E402"]
