[project]
name = "research-flow-backend"
version = "0.1.0"
description = "Research-Flow backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.8,<3",
    "pyyaml>=6.0,<7",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
tmp_path_retention_policy = "failed"
